ShowALlpointsForGUi